--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,13 @@
 {
     "require": {
         "slim/psr7": "^1.7",
-        "slim/slim": "^4.10"
+        "slim/slim": "^4.10",
+        "vlucas/phpdotenv": "^5.6",
+        "firebase/php-jwt": "^6.11"
+    },
+    "autoload": {
+        "psr-4": {
+            "App\\": "backend/src/"
+        }
     }
 }
